# vartejo

./: .gitignore  Makefile  README.md  cabal-store  eqview  fin  qemu-mac  randwipe  synclient-toggle
src/anki/: Makefile  anki.cabal
src/anki/src/: Main.hs
src/browser-watch/: Makefile  browser-watch
src/cabal-store/: cabal-store
src/chenv/: Makefile  chenv
src/chroot-qcow2/: Makefile  chroot-qcow2
src/diceware/: Makefile  diceware
src/fintools/: .gitignore  Makefile  fin
src/fintools/test/: run-tests  test-fin  utest
src/fintools/test/res/: LF-daily-compact-alphavantage.co-2017-08-23.csv
src/fintools/test/res/header/: LF-daily-100-maximal.csv  (+1 more)
src/free-wifi-keepalive/: Makefile  free-wifi-keepalive
src/gas-run/: Makefile  gas-run.sh
src/gmail-oauth2-refresh/: Makefile  gmail-oauth2-refresh
src/gmail-oauth2-refresh/test/: data.conf
src/greenhost/: Makefile  bootstrap.sh  greenhost  greenhost.scm  guix-bootstrap.sh
src/json-cmd/: Makefile  json-cmd.cabal  stack.yaml
src/json-cmd/app/: Main.hs
src/json-cmd/src/: Lib.hs
src/pi/: chud.dc  gl.dc  pi.txt
src/qemu-mac/: Makefile
src/randwipe/: Makefile  randwipe
src/remd/: Makefile  remd
src/rems/: Makefile  rems
src/sforth/: Makefile  notes.md  sforth  src.dmp  src.sys
src/shocker/: Makefile  shocker
src/synclient-toggle/: Makefile
src/tm/: Makefile  tm.cabal
src/tm/app/: Main.hs
src/tm/src/TM/: Tagger.hs  tagger.schema.sql  url.schema.sql
src/xmppcat/: Makefile  stack.yaml
src/xmppcat/src/: Main.hs
src/xscreensaver-toggle/: Makefile  xscreensaver-toggle
(+7 files in other folders)
